{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 36,
  "lineage": "d7ce1dbb-6136-654c-d1e2-5ee37cc9a6c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "root_ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.53",
            "association_id": "eipassoc-0c6e585eb5ca1ede3",
            "domain": "vpc",
            "id": "eipalloc-07d39de995178021d",
            "instance": "i-00b7568dda4681b4e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c850b6aec6663a06",
            "private_dns": "ip-10-0-1-53.us-west-2.compute.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-44-237-242-28.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.242.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.root_ec2_nic",
            "aws_security_group.root_ec2_allow_ssh_sg",
            "aws_subnet.root_ec2_subnet",
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_linux_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06999a8dddda0d0b3",
            "arn": "arn:aws:ec2:us-west-2:197177651752:instance/i-00b7568dda4681b4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b7568dda4681b4e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "root-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c850b6aec6663a06"
              }
            ],
            "primary_network_interface_id": "eni-0c850b6aec6663a06",
            "private_dns": "ip-10-0-1-53.us-west-2.compute.internal",
            "private_ip": "10.0.1.53",
            "public_ip": "44.237.242.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-015bfe96c2505f6eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d6e71bcd7f0c823",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063c94f9efdd871fe"
            ]
          },
          "dependencies": [
            "aws_network_interface.root_ec2_nic",
            "aws_security_group.root_ec2_allow_ssh_sg",
            "aws_subnet.root_ec2_subnet",
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:197177651752:internet-gateway/igw-02c9c04dc535f8757",
            "id": "igw-02c9c04dc535f8757",
            "owner_id": "197177651752",
            "vpc_id": "vpc-02adabff50d8ad9a9"
          },
          "dependencies": [
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "root_ec2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-04046eb7db7d76e3b",
                "device_index": 0,
                "instance": "i-00b7568dda4681b4e"
              }
            ],
            "id": "eni-0c850b6aec6663a06",
            "ipv6_address_count": 0,
            "mac_address": "02:6b:1f:72:1f:a9",
            "private_ip": "10.0.1.53",
            "private_ips": [
              "10.0.1.53"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-063c94f9efdd871fe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d6e71bcd7f0c823"
          },
          "dependencies": [
            "aws_security_group.root_ec2_allow_ssh_sg",
            "aws_subnet.root_ec2_subnet",
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "root_ec2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a2c7f4ecc3260da",
            "owner_id": "197177651752",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c9c04dc535f8757",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c9c04dc535f8757",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "root-ec2-route-table"
            },
            "vpc_id": "vpc-02adabff50d8ad9a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "root_ec2_subnet_rt_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036288b79afe3b4ae",
            "route_table_id": "rtb-07a2c7f4ecc3260da",
            "subnet_id": "subnet-06d6e71bcd7f0c823"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.root_ec2_rt",
            "aws_subnet.root_ec2_subnet",
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "root_ec2_allow_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:197177651752:security-group/sg-063c94f9efdd871fe",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063c94f9efdd871fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "root_ec2_allow_ssh_sg",
            "name_prefix": "",
            "owner_id": "197177651752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-02adabff50d8ad9a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "root_ec2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:197177651752:subnet/subnet-06d6e71bcd7f0c823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06d6e71bcd7f0c823",
            "map_public_ip_on_launch": false,
            "owner_id": "197177651752",
            "tags": {
              "Name": "root-ec2-subnet"
            },
            "vpc_id": "vpc-02adabff50d8ad9a9"
          },
          "dependencies": [
            "aws_vpc.root_ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "root_ec2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:197177651752:vpc/vpc-02adabff50d8ad9a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0351ea7aa18b759e9",
            "default_route_table_id": "rtb-0fcdefe729aebda5b",
            "default_security_group_id": "sg-0651ace3215ede90d",
            "dhcp_options_id": "dopt-c180d7b9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02adabff50d8ad9a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fcdefe729aebda5b",
            "owner_id": "197177651752",
            "tags": {
              "Name": "root-ec2-vpc"
            }
          }
        }
      ]
    }
  ]
}